Table Users {
  Id uuid [pk]
  Username varchar [unique, not null]
  PasswordHash varchar [not null]
  Role varchar [not null, note: 'Admin, User']
  CreatedAt timestamp [default: `now()`]
}

Table Tickets {
  Id uuid [pk]
  Title varchar [not null]
  Description text
  Status varchar [not null, note: 'Open, In Progress, Done']
  CreatedById uuid [ref: > Users.Id]
  AssignedToId uuid [ref: > Users.Id, null]
  CreatedAt timestamp [default: `now()`]
  UpdatedAt timestamp [default: `now()`]
}

Table Comments {
  Id uuid [pk]
  TicketId uuid [ref: > Tickets.Id]
  AuthorId uuid [ref: > Users.Id]
  Content text [not null]
  CreatedAt timestamp [default: `now()`]
}

Table Articles {
  Id uuid [pk]
  Title varchar [not null]
  Content text [not null]
  AuthorId uuid [ref: > Users.Id]
  CreatedAt timestamp [default: `now()`]
  UpdatedAt timestamp [default: `now()`]
}
